--- a/calc_index/algo_AMIE_manus.ipynb
+++ b/calc_index/algo_AMIE_manus.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,19 +24,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home1/nalex2023/.conda/envs/nma/lib/python3.13/site-packages/distributed/node.py:187: UserWarning: Port 8787 is already in use.\n",
-      "Perhaps you already have a cluster running?\n",
-      "Hosting the HTTP server on port 33091 instead\n",
-      "  warnings.warn(\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -44,7 +34,7 @@
        "    <div style=\"width: 24px; height: 24px; background-color: #e1e1e1; border: 3px solid #9D9D9D; border-radius: 5px; position: absolute;\"> </div>\n",
        "    <div style=\"margin-left: 48px;\">\n",
        "        <h3 style=\"margin-bottom: 0px;\">Client</h3>\n",
-       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Client-9795d32a-eae3-11ef-9e13-3cecef4ec7d4</p>\n",
+       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Client-d15b9f13-f544-11ef-9168-3cecef4ec7d4</p>\n",
        "        <table style=\"width: 100%; text-align: left;\">\n",
        "\n",
        "        <tr>\n",
@@ -57,7 +47,7 @@
        "        \n",
        "            <tr>\n",
        "                <td style=\"text-align: left;\">\n",
-       "                    <strong>Dashboard: </strong> <a href=\"http://10.42.239.61:33091/status\" target=\"_blank\">http://10.42.239.61:33091/status</a>\n",
+       "                    <strong>Dashboard: </strong> <a href=\"http://10.42.239.61:8787/status\" target=\"_blank\">http://10.42.239.61:8787/status</a>\n",
        "                </td>\n",
        "                <td style=\"text-align: left;\"></td>\n",
        "            </tr>\n",
@@ -75,11 +65,11 @@
        "    </div>\n",
        "    <div style=\"margin-left: 48px;\">\n",
        "        <h3 style=\"margin-bottom: 0px; margin-top: 0px;\">SLURMCluster</h3>\n",
-       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">d1d16ad6</p>\n",
+       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">f033d4ae</p>\n",
        "        <table style=\"width: 100%; text-align: left;\">\n",
        "            <tr>\n",
        "                <td style=\"text-align: left;\">\n",
-       "                    <strong>Dashboard:</strong> <a href=\"http://10.42.239.61:33091/status\" target=\"_blank\">http://10.42.239.61:33091/status</a>\n",
+       "                    <strong>Dashboard:</strong> <a href=\"http://10.42.239.61:8787/status\" target=\"_blank\">http://10.42.239.61:8787/status</a>\n",
        "                </td>\n",
        "                <td style=\"text-align: left;\">\n",
        "                    <strong>Workers:</strong> 0\n",
@@ -106,11 +96,11 @@
        "        <div style=\"width: 24px; height: 24px; background-color: #FFF7E5; border: 3px solid #FF6132; border-radius: 5px; position: absolute;\"> </div>\n",
        "        <div style=\"margin-left: 48px;\">\n",
        "            <h3 style=\"margin-bottom: 0px;\">Scheduler</h3>\n",
-       "            <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Scheduler-f514ffe9-1058-4bfd-8e46-c7fa0aed875a</p>\n",
+       "            <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Scheduler-506a8745-749b-48db-9c63-2d78998b1222</p>\n",
        "            <table style=\"width: 100%; text-align: left;\">\n",
        "                <tr>\n",
        "                    <td style=\"text-align: left;\">\n",
-       "                        <strong>Comm:</strong> tcp://10.42.239.61:39299\n",
+       "                        <strong>Comm:</strong> tcp://10.42.239.61:37603\n",
        "                    </td>\n",
        "                    <td style=\"text-align: left;\">\n",
        "                        <strong>Workers:</strong> 0\n",
@@ -118,7 +108,7 @@
        "                </tr>\n",
        "                <tr>\n",
        "                    <td style=\"text-align: left;\">\n",
-       "                        <strong>Dashboard:</strong> <a href=\"http://10.42.239.61:33091/status\" target=\"_blank\">http://10.42.239.61:33091/status</a>\n",
+       "                        <strong>Dashboard:</strong> <a href=\"http://10.42.239.61:8787/status\" target=\"_blank\">http://10.42.239.61:8787/status</a>\n",
        "                    </td>\n",
        "                    <td style=\"text-align: left;\">\n",
        "                        <strong>Total threads:</strong> 0\n",
@@ -156,10 +146,10 @@
        "</div>"
       ],
       "text/plain": [
-       "<Client: 'tcp://10.42.239.61:39299' processes=0 threads=0, memory=0 B>"
+       "<Client: 'tcp://10.42.239.61:37603' processes=0 threads=0, memory=0 B>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,6 +183,108 @@
     "cluster.scale(jobs=10)\n",
     "client = Client(cluster)\n",
     "client"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_dft(in_dir,arm_data=True):\n",
+    "    files = glob.glob(in_dir+os.sep+'*.nc')\n",
+    "    if len(files) == 0:\n",
+    "        files = glob.glob(in_dir+os.sep+'*.cdf')\n",
+    "        if len(files) == 0:\n",
+    "            raise Exception('No files Found')\n",
+    "        else:\n",
+    "            pass\n",
+    "    else:\n",
+    "        pass\n",
+    "    \n",
+    "    dft = pd.DataFrame(files,columns=['filepath'])\n",
+    "    dft['filename'] = dft['filepath'].str.split(os.sep).str[-1]\n",
+    "    \n",
+    "    if arm_data:\n",
+    "        dft['datetime'] = pd.to_datetime(dft['filename'].str.split(\n",
+    "            '.',\n",
+    "            expand=True).iloc[:, 2] + dft['filename'].str.split(\n",
+    "                '.',  expand=True).iloc[:, 3],format='%Y%m%d%H%M%S')\n",
+    "\n",
+    "\n",
+    "    return dft"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m launch_stat \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msonde_with_data.csv\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m----> 5\u001b[0m dft_sonde \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(launch_stat)\n\u001b[1;32m      7\u001b[0m dft_sonde[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdate\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mto_datetime(dft_sonde[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdate\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m     10\u001b[0m dft_sonde\u001b[38;5;241m.\u001b[39mset_index(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdate\u001b[39m\u001b[38;5;124m'\u001b[39m,inplace\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "launch_stat = 'sonde_with_data.csv'\n",
+    "\n",
+    "\n",
+    "\n",
+    "dft_sonde = pd.read_csv(launch_stat)\n",
+    "\n",
+    "dft_sonde['date'] = pd.to_datetime(dft_sonde['date'])\n",
+    "\n",
+    "\n",
+    "dft_sonde.set_index('date',inplace=True)\n",
+    "\n",
+    "inter_data = '/home1/nalex2023/Datasets/interpsonde_manus'\n",
+    "\n",
+    "dft_inter = create_dft(inter_data)\n",
+    "\n",
+    "dft_inter['datetime'] = dft_inter['datetime'].dt.round('H')\n",
+    "dft_inter.set_index('datetime',inplace=True)\n",
+    "\n",
+    "dft_inter_sub = pd.merge(dft_sonde,dft_inter,left_index=True,\n",
+    "                         right_index=True,how='inner')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "interp_dset = xr.open_mfdataset(dft_inter_sub['filepath_y'].values,parallel=True,combine='by_coords',chunks={'time':100})\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'interp_dset' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m interp_dset\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'interp_dset' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "interp_dset"
    ]
   },
   {
