temperature difference land-sst

--- a/download_era.ipynb
+++ b/download_era.ipynb
@@ -146,15 +146,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-04-14 11:28:43,703 INFO [2024-09-26T00:00:00] Watch our [Forum](https://forum.ecmwf.int/) for Announcements, news and other discussed topics.\n",
-      "2025-04-14 11:28:43,704 WARNING [2024-06-16T00:00:00] CDS API syntax is changed and some keys or parameter names may have also changed. To avoid requests failing, please use the \"Show API request code\" tool on the dataset Download Form to check you are using the correct syntax for your API request.\n"
+      "2025-04-15 10:02:12,804 INFO [2024-09-26T00:00:00] Watch our [Forum](https://forum.ecmwf.int/) for Announcements, news and other discussed topics.\n",
+      "2025-04-15 10:02:12,804 WARNING [2024-06-16T00:00:00] CDS API syntax is changed and some keys or parameter names may have also changed. To avoid requests failing, please use the \"Show API request code\" tool on the dataset Download Form to check you are using the correct syntax for your API request.\n"
      ]
     }
    ],
@@ -173,10 +173,11 @@
     "request = {\n",
     "    \"product_type\": [\"reanalysis\"],\n",
     "    \"variable\": [\n",
-    "        \"2m_temperature\",\n",
-    "        \"sea_surface_temperature\"\n",
+    "        \"10m_u_component_of_wind\",\n",
+    "        \"10m_v_component_of_wind\",\n",
+    "        \"mean_sea_level_pressure\"\n",
     "    ],\n",
-    "    \"year\": [\"2000\"],\n",
+    "    \"year\": [\"2001\"],\n",
     "    \"month\": [\n",
     "        \"01\", \"02\", \"03\",\n",
     "        \"04\", \"05\", \"06\",\n",
@@ -223,21 +224,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-04-14 11:29:45,393 INFO Request ID is 0ce85f37-5d25-414b-9299-f88df0bea0ed\n",
-      "2025-04-14 11:29:45,544 INFO status has been updated to accepted\n",
-      "2025-04-14 11:30:07,417 INFO status has been updated to running\n",
-      "2025-04-14 11:54:10,120 INFO status has been updated to successful\n"
+      "2025-04-15 12:35:06,670 INFO Request ID is d1914078-9a60-4065-9270-aeac6483f2e0\n",
+      "2025-04-15 12:35:06,864 INFO status has been updated to accepted\n",
+      "2025-04-15 12:35:21,025 INFO status has been updated to running\n",
+      "2025-04-15 13:09:35,086 INFO status has been updated to successful\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8ef74700f630405b91599f34ab58a7c3",
+       "model_id": "1dfc26e46e0a4363a72b1e4e67e6c9a7",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "308fb853585827103dd16947f9005c9f.nc:   0%|          | 0.00/978M [00:00<?, ?B/s]"
+       "833433a3b85f65d7d32ee38aad44e9f7.nc:   0%|          | 0.00/3.09G [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -247,21 +248,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-04-14 11:55:13,539 INFO Request ID is 26c3177c-0c1a-4e6b-9d4e-5bfc5c12ea8c\n",
-      "2025-04-14 11:55:13,693 INFO status has been updated to accepted\n",
-      "2025-04-14 11:55:46,956 INFO status has been updated to running\n",
-      "2025-04-14 12:19:39,067 INFO status has been updated to successful\n"
+      "2025-04-15 13:13:34,983 INFO Request ID is fa9f9f50-4a45-4bdc-a351-1b81ee43793f\n",
+      "2025-04-15 13:13:35,141 INFO status has been updated to accepted\n",
+      "2025-04-15 13:13:44,372 INFO status has been updated to running\n",
+      "2025-04-15 13:50:03,795 INFO status has been updated to successful\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6ecbb49bd54d4908a81e9588f568bca8",
+       "model_id": "410320666c7344ca92f8d182a6c9bb4d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "f689f6acac1ac0a2744f83690f946f4a.nc:   0%|          | 0.00/1.00G [00:00<?, ?B/s]"
+       "555520c4bc9932fe9902267f8c3ff0ae.nc:   0%|          | 0.00/3.09G [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -271,21 +272,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-04-14 12:21:19,321 INFO Request ID is ec56dbee-298b-411a-b03b-4c0a513b618e\n",
-      "2025-04-14 12:21:19,476 INFO status has been updated to accepted\n",
-      "2025-04-14 12:24:12,758 INFO status has been updated to running\n",
-      "2025-04-14 12:49:44,933 INFO status has been updated to successful\n"
+      "2025-04-15 14:27:36,415 INFO Request ID is 5a8c4237-2140-410f-ae1c-be4a9723e6cd\n",
+      "2025-04-15 14:27:36,580 INFO status has been updated to accepted\n",
+      "2025-04-15 14:27:50,707 INFO status has been updated to running\n",
+      "2025-04-15 15:08:05,710 INFO status has been updated to successful\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c7ae0d359d3417498374db50fc26c43",
+       "model_id": "c42067eca7294aaa83aabc9eff4edbf1",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "c8efbff1cb42d66556ac319e583f269a.nc:   0%|          | 0.00/0.99G [00:00<?, ?B/s]"
+       "85990adb31c6ed45de342a1469a37a7.nc:   0%|          | 0.00/3.08G [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -295,21 +296,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-04-14 12:51:39,429 INFO Request ID is 1ea3154f-f9ac-4427-9ab9-4c0a807af4e3\n",
-      "2025-04-14 12:51:39,590 INFO status has been updated to accepted\n",
-      "2025-04-14 12:52:13,082 INFO status has been updated to running\n",
-      "2025-04-14 13:14:04,007 INFO status has been updated to successful\n"
+      "2025-04-15 15:11:07,721 INFO Request ID is 22a5191a-a09d-4cb6-9e69-8ba5fa079361\n",
+      "2025-04-15 15:11:07,893 INFO status has been updated to accepted\n",
+      "2025-04-15 15:11:16,725 INFO status has been updated to running\n",
+      "2025-04-15 16:09:47,541 INFO status has been updated to successful\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "597606b77e614c97a22f3834c847a59d",
+       "model_id": "3bc0f5b7bb8e42968a2f084664607297",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "e19af2fc983e02c5a92b4bfd1fb100c4.nc:   0%|          | 0.00/0.99G [00:00<?, ?B/s]"
+       "f62b8c44deb09e1d9a03003f8d203e4a.nc:   0%|          | 0.00/3.11G [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -319,21 +320,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-04-14 13:16:36,592 INFO Request ID is ca1e87ac-993d-4ad9-937e-dde079e15ae5\n",
-      "2025-04-14 13:16:36,747 INFO status has been updated to accepted\n",
-      "2025-04-14 13:16:50,782 INFO status has been updated to running\n",
-      "2025-04-14 13:43:02,370 INFO status has been updated to successful\n"
+      "2025-04-15 16:15:58,677 INFO Request ID is 95ffe860-6762-44a8-a960-6678247c1a61\n",
+      "2025-04-15 16:15:58,870 INFO status has been updated to accepted\n",
+      "2025-04-15 16:16:32,839 INFO status has been updated to running\n",
+      "2025-04-15 16:52:26,945 INFO status has been updated to successful\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3561c6c75bf34d6eaa11c3ec00e55be1",
+       "model_id": "e02d542837ec44f3a41f922a6c7311ab",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "7102442e47bd30bc3b3329d01a0422a7.nc:   0%|          | 0.00/979M [00:00<?, ?B/s]"
+       "287140da8f3e8fe060554438ca0293b0.nc:   0%|          | 0.00/3.11G [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -343,153 +344,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-04-14 13:49:19,461 INFO Request ID is 461633b7-68bd-460a-9673-ecfd51788c40\n",
-      "2025-04-14 13:49:19,613 INFO status has been updated to accepted\n",
-      "2025-04-14 13:49:41,326 INFO status has been updated to running\n",
-      "2025-04-14 14:13:44,185 INFO status has been updated to successful\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d4619f2823448648b0da7c31f313095",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "c935312a851fdc8e849c1367a09f9819.nc:   0%|          | 0.00/970M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-04-14 14:17:02,560 INFO Request ID is 6cee77fb-1f0e-4816-9c3e-aeaf65ffceb5\n",
-      "2025-04-14 14:17:02,713 INFO status has been updated to accepted\n",
-      "2025-04-14 14:17:11,592 INFO status has been updated to running\n",
-      "2025-04-14 14:41:32,679 INFO status has been updated to successful\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8a6a25d54a15409aaac644886c6bdf51",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "38e4c776ff0753147a0a203e6d892976.nc:   0%|          | 0.00/1.00G [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-04-14 14:43:26,640 INFO Request ID is a5b3c466-81c1-40e9-95c0-2e03bc68a771\n",
-      "2025-04-14 14:43:26,795 INFO status has been updated to accepted\n",
-      "2025-04-14 14:43:48,699 INFO status has been updated to running\n",
-      "2025-04-14 15:07:52,202 INFO status has been updated to successful\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7741d8e5b24c4c4495e697bb86066b6d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "d4a1d739aa50ee57e27c66433159364.nc:   0%|          | 0.00/975M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-04-14 15:10:11,085 INFO Request ID is 6d971ec0-b180-49f7-85d3-0b87fea0d5c9\n",
-      "2025-04-14 15:10:11,250 INFO status has been updated to accepted\n",
-      "2025-04-14 15:10:25,346 INFO status has been updated to running\n",
-      "2025-04-14 15:36:36,619 INFO status has been updated to successful\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1ed400530bb043a3878a556a3402eee1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "f95743ab505f7be77d9308e7a518f734.nc:   0%|          | 0.00/976M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-04-14 15:39:40,917 INFO Request ID is 8dc118f0-93c6-4d25-971b-42252f9b4ae8\n",
-      "2025-04-14 15:39:41,120 INFO status has been updated to accepted\n",
-      "2025-04-14 15:39:55,414 INFO status has been updated to running\n",
-      "2025-04-14 16:08:13,081 INFO status has been updated to successful\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3f018f869cec4d4fbf883551fd59d9c1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "19688440d6faac54ca21d54cd132a5fb.nc:   0%|          | 0.00/0.99G [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-04-14 16:09:31,125 INFO Request ID is e43f7f7b-eb73-486c-a5f6-56ddec901aa2\n",
-      "2025-04-14 16:09:31,281 INFO status has been updated to accepted\n",
-      "2025-04-14 16:10:22,023 INFO status has been updated to running\n",
-      "2025-04-14 16:33:55,700 INFO status has been updated to successful\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3b515f679d284b0b9ddfb84e9000128d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "1827fe830cc165779fff466ed21a294c.nc:   0%|          | 0.00/973M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-04-14 16:35:14,271 INFO Request ID is d4991b8e-c6ee-4b72-a319-8ff04689e9d0\n",
-      "2025-04-14 16:35:14,432 INFO status has been updated to accepted\n",
-      "2025-04-14 16:35:28,529 INFO status has been updated to running\n"
+      "2025-04-15 16:58:06,924 INFO Request ID is c28b82dd-ea9c-4403-b70d-0d5f593f4dec\n",
+      "2025-04-15 16:58:07,077 INFO status has been updated to accepted\n",
+      "2025-04-15 16:58:16,322 INFO status has been updated to running\n"
      ]
     }
    ],
@@ -499,7 +356,7 @@
     "\n",
     "#out_fol = '/media/nmathewa/nma_backup/Datasets/CAPE_Canvaeral_ERA_single_1940_2025/'\n",
     "\n",
-    "out_fol = '/media/nmathewa/nma_backup/Datasets/Datasets/ERA5_single_level_Maritime/sst_and_t2m_2000_2014/'\n",
+    "out_fol = '/media/nmathewa/nma_backup/Datasets/Datasets/ERA5_single_level_Maritime/wind_and_mslp_2000_2014/'\n",
     "\n",
     "if os.path.exists(out_fol) == False:\n",
     "    os.makedirs(out_fol)\n",
